scripts/app.less
@smallscreen-padding: 20px;

body {
	@media (max-width: 767px) {
		padding: 0;
	}
}

.symbol {
	width: 100px;
	height: 100px;
}

dl.inline {
	margin: 0;
	dt {
		display: inline-block;
	}
	dd {
		margin-left: 10px;
		display: inline-block;
	}
}

.head {
	@media (max-width: 767px) {
		padding: @smallscreen-padding;
	}
	padding: 25px 0;
	h1.logo {
		margin: 0;
		font-size: 30px;
		line-height: 1;
		text-transform: lowercase;
		a {
			color: #000;
			text-decoration: none;
		}
	}
}

section {
	@media (max-width: 767px) {
		padding: @smallscreen-padding;
	}
	margin-bottom: 50px;
}

.jumbotron {
	@media (max-width: 767px) {
		padding: @smallscreen-padding;
	}
	margin-top: 0;
	padding: 45px 0;
	background-color: #fafafa;
	border-bottom: 1px solid #e5e5e5;
	h2 {
		margin: 0;
		font-size: 60px;
		font-weight: 200;
		line-height: 1;
		letter-spacing: -1px;
	}
	.signup {
		@media (max-width: 767px) {
			margin-top: 40px;
		}
	}
}

.teasers {
	.teaser {
		@media (max-width: 767px) {
			margin-top: 50px;
		}
		&:first-child {
			margin-top: 0;
		}
	}
}

.mission {
	min-height: 330px;
}

.foot {
	@media (max-width: 767px) {
		padding: @smallscreen-padding;
	}
	font-size: 85%;
}

